<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"> Lab7</string>
    <string name="ButtonText"> Click here</string>
    <string name="textMessage"> Look at my GUI </string>
    <string name="textMessage2"> Lab2 GUI</string>
    <string name="toast_message">Here is more information</string>
    <string name="Edit_message">Type here</string>
    <string name="Edit_message1">Enter your name here</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="CheckoutText">Check this out</string>
    <string name="imageHint">national flag</string>
    <string name="switchOnMessage">Switch is on</string>
    <string name="switchOffMessage">Switch is off</string>
    <string name="undoMessage">Undo</string>
    <string name="emailMessage1">"Enter your email address" </string>
    <string name="emailMessage2">"Type email here" </string>
    <string name="passwordMessage1">"Type Your password here" </string>
    <string name="login1">"LOGIN" </string>
    <string name="yourProfile">"Your profile" </string>
    <string name="name">"Your name" </string>
    <string name="nameMessage1">"Enter your name" </string>
    <string name="emailMessage3">"Your email" </string>
    <string name="emailMessage4">"Enter your email" </string>
    <string name="picture1">"Your picture" </string>
    <string name="buttonText2">""Click the button above to take a picture"" </string>
    <string name="buttonText3">"back" </string>
    <string name="chatButton"> "Go to Chat“</string>
    <string name="sendButton"> "Send" </string>
    <string name="receiveButton"> "Receive" </string>
    <string name="sendMessage"> "send Message goes here" </string>
    <string name="receiveMessage"> "receive message goes here" </string>
    <string name="negative">no </string>
    <string name="positive">”yes“</string>
    <string name="delete">Do you want to delete this?</string>
    <string name="rowSelected">The selected row is</string>
    <string name="idSelected">The database id is </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Message here</string>
    <string name="choice1">Choice1</string>
    <string name="choice2">Choice2</string>
    <string name="choice3">Choice3</string>
    <string name="GoToToolBar">Go to toolbar page</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


</resources>