<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:layout_margin="40dp"
        android:text="@string/emailMessage1"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/reserved_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"    />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailMessage2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/passwordMessage1" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login1" />

</LinearLayout>