<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="336dp"
        android:layout_height="128dp"
        android:baselineAligned="false"
        android:text="@string/textMessage"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_weight="1"
            android:layout_width="156dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/flag" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="170dp"
            android:layout_height="47dp"
            android:layout_below="@id/imageButton"
            android:text="@string/SwitchText" />

        <Button
            android:id="@+id/button"
            android:layout_width="176dp"
            android:layout_height="51dp"
            android:layout_gravity="fill"
            android:text="@string/ButtonText"
            android:layout_below="@id/imageButton"
            app:strokeColor="#A52F2F" />

    </LinearLayout>


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:ems="10"
        android:hint="@string/Edit_message"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/CheckoutText" />


</LinearLayout>