<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true">


    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="0dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="351dp"
        android:text="@string/textMessage1"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="197dp"
        android:layout_marginBottom="146dp"
        android:contentDescription="@string/imageHint"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flag"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="72dp"
        android:text="@string/ButtonText"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="227dp"
        android:text="@string/SwitchText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="93dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Edit_message1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>